# scratch

./: README.md  pyproject.toml
notebooks/: my_first_notebook.ipynb
src/: add_something.py  main.py
tests/: test_add_something.py
