[tool.poetry]
name = "scratch"
version = "0.1.0"
description = "for throwaway dev only"
authors = ["Danny Rooney <daniel.rooney@arnoldclark.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
