[tool.poetry]
name = "scratch"
version = "0.1.0"
description = "for throwaway dev only"
authors = ["Danny Rooney <daniel.rooney@arnoldclark.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
ipykernel = "^6.15.0"
pandas = "^1.4.3"
ipython = "^8.4.0"
nbformat = "^5.4.0"
matplotlib = "^3.5.2"
bokeh = "^2.4.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
